# SINENSIS_JUCE

./: CMakeLists.txt  Manual.key  README.md  Sinensis.iss  SinensisManual.key  juce_sinensis.code-workspace  windowsnotes.txt
src/: BackgroundComponent.cpp  BackgroundComponent.hpp  BandControl.cpp  BandControl.h  CMakeLists.txt  CustomColors.cpp  CustomColors.hpp  Filter.cpp  Filter.h  Filter.hpp  GraphicTools.cpp  GraphicTools.hpp  Listener.md  LookAndFeel.cpp  LookAndFeel.h  LookAndFeel.hpp  MidiBuffer.cpp  MidiBuffer.hpp  MidiControl.cpp  MidiControl.h  ModeSelector.cpp  ModeSelector.h  PlaceHolder.cpp  PlaceHolder.h  PluginEditor.cpp  PluginEditor.h  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.h  PluginProcessor.hpp  Q.cpp  Q.h  RadioButtonAttachment.cpp  RadioButtonAttachment.hpp  Sinensis.cpp  Sinensis.h  Sinensis.hpp  Sinensis.md  Title.cpp  Title.h  (+3 more)
