if(DEFINED ENV{AAX_SDK_PATH})
    set(AAX_SDK_PATH $ENV{AAX_SDK_PATH})
endif()
if(DEFINED AAX_SDK_PATH)
    set(AAX_BUILD_FLAG AAX)
    file(TO_CMAKE_PATH "${AAX_SDK_PATH}" AAX_SDK_CMAKE_PATH)
    message(STATUS "AAX Build is enabled. AAX SDK = " ${AAX_SDK_CMAKE_PATH})
    juce_set_aax_sdk_path(${AAX_SDK_CMAKE_PATH})
else()
    message(STATUS "AAX Build is disabled. To enable, set AAX_SDK_PATH to your environment variable or specify -DAAX_SDK_PATH to CMake configure option.")
endif()

juce_add_plugin(Sinensis
    # VERSION ...                                     # Set this if the plugin version is different to the project version
    # ICON_BIG ""   # ICON_* arguments specify a path to an image file to use as an icon for the Standalone
    #   ICON_SMALL "${CMAKE_SOURCE_DIR}/Assets/icon16.png " 
    COMPANY_NAME "NOI"                    # Specify the name of the plugin's author
    COMPANY_COPYRIGHT "NOI"
    COMPANY_WEBSITE "https://lenomdesfleurs.github.io/Blog/"
    COMPANY_EMAIL "Thomasvguillory@gmail.com"
    IS_SYNTH FALSE                       # Is this a synth or an effect?
    NEEDS_MIDI_INPUT TRUE               # Does the plugin need midi input?
    NEEDS_MIDI_OUTPUT FALSE              # Does the plugin need midi output?
    VST_NUM_MIDI_INS 1
    # IS_MIDI_EFFECT TRUE                # Is this plugin a MIDI effect?
    # EDITOR_WANTS_KEYBOARD_FOCUS TRUE/FALSE    # Does the editor need keyboard focus?
    COPY_PLUGIN_AFTER_BUILD TRUE        # Should the plugin be installed to a default location after building?
    PLUGIN_MANUFACTURER_CODE Noia               # A four-character manufacturer id with at least one upper-case character
    PLUGIN_CODE SINS                            # A unique four-character plugin id with at least one upper-case character
    FORMATS 
    # The formats to build. Other valid formats are: AAX Unity VST AU AUv3
            Standalone 
            AU
            # AUv3 
            VST3 
            # Unity 
            ${AAX_BUILD_FLAG}               
    VST3_CATEGORIES "Fx" 
    AU_MAIN_TYPE "kAudioUnitType_MusicEffect"
    # AU_SANDBOX_SAFE TRUE
    # AAX_CATEGORY ""
    HARDENED_RUNTIME_ENABLED TRUE # macOS app settings
    # HARDENED_RUNTIME_OPTIONS
    # APP_SANDBOX_ENABLED
    # APP_SANDBOX_INHERIT
    # DESCRIPTION "" #when i set this option, the name of AAX plugin became this description(bug?)
    MICROPHONE_PERMISSION_ENABLED TRUE
    MICROPHONE_PERMISSION_TEXT "This applicaion requires a permission to use an audio input device of your computer. By Default, Built-In microphone will be used."

    PRODUCT_NAME "Sinensis")        # The name of the final 

target_compile_features(Sinensis PUBLIC cxx_std_17)


target_compile_definitions(Sinensis
    PUBLIC
    # JUCE_WEB_BROWSER and JUCE_USE_CURL would be on by default, but you might not need them.
    JUCE_WEB_BROWSER=0  # If you remove this, add `NEEDS_WEB_BROWSER TRUE` to the `juce_add_plugin` call
    JUCE_USE_CURL=0     # If you remove this, add `NEEDS_CURL TRUE` to the `juce_add_plugin` call
    JUCE_VST3_CAN_REPLACE_VST2=0
    # JUCE_DISPLAY_SPLASH_SCREEN=0 #if your plugin is distributed with GPL license or paid
)

juce_add_binary_data(JuceLogoBinary
SOURCES 
${CMAKE_SOURCE_DIR}/assets/juce-logo.svg
${CMAKE_SOURCE_DIR}/assets/NOI.svg
)

file(GLOB_RECURSE SourceFiles CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp") #"${CMAKE_CURRENT_SOURCE_DIR}/*.h")
target_sources(Sinensis PRIVATE ${SourceFiles})

# target_sources(Sinensis PRIVATE
#     # /*.cpp
#     PluginEditor.cpp
#     PluginProcessor.cpp
#     LookAndFeel.cpp 
#     MidiControl.cpp 
#     ModeSelector.cpp 
#     Q.cpp 
#     Title.cpp 
#     Sinensis.cpp 
#     BandControl.cpp 
    
# )

target_link_libraries(Sinensis PUBLIC
JuceLogoBinary
juce::juce_audio_basics
juce::juce_audio_devices
juce::juce_audio_formats
juce::juce_audio_plugin_client
juce::juce_audio_processors
juce::juce_audio_utils
juce::juce_core
juce::juce_cryptography
juce::juce_data_structures
juce::juce_dsp
juce::juce_events
juce::juce_graphics
juce::juce_gui_basics
juce::juce_gui_extra
juce::juce_opengl
juce::juce_product_unlocking
)

juce_generate_juce_header(Sinensis)
